# okf

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  mina.kdl  mori.dhall
.seihou/: config.dhall  manifest.json
agents/skills/release/: SKILL.md
docs/integrations/: mina.md  mori-ddd-export.md  mori.md
docs/masterplans/: 1-implement-okf-core-library-and-cli.md  2-make-okf-core-producer-ready-for-okf-authoring.md  3-integrate-baikai-for-agent-assist-and-kit-support-in-okf.md
docs/plans/: 1-implement-okf-document-model-and-parser.md  10-add-concept-construction-and-bundle-writing-to-okf-core.md  11-add-version-with-git-sha-to-the-okf-cli-for-cabal-and-nix-builds.md  12-add-shell-completion-to-the-okf-cli.md  13-add-profile-based-validation-to-okf.md  14-add-embedded-help-topic-guides-to-the-okf-cli.md  15-add-log-md-support-to-okf-core-and-cli.md  16-wire-baikai-and-baikai-kit-into-the-okf-build.md  17-add-per-project-and-global-configuration-to-okf.md  18-add-okf-kit-command-for-skill-and-subagent-installation.md  19-add-okf-assist-command-for-interactive-agent-assistance.md  2-implement-okf-bundle-indexing-and-graph-extraction.md  20-create-the-okf-kit-repository-with-a-seed-skill-and-end-to-end-docs.md  3-implement-basic-okf-cli.md  4-add-okf-fixtures-tests-and-documentation.md  5-prepare-mori-and-mina-integration-surfaces.md  6-add-frontmatter-authoring-api-to-okf-core.md  7-add-concept-link-rendering-with-round-trip-guarantee.md  8-add-bundle-validation-and-referential-integrity-to-okf-core.md  9-surface-okf-authoring-in-the-cli-and-user-docs.md
docs/profiles/: postgresql.dhall
docs/user/: README.md  authoring.md  cli.md  fixtures.md  format.md  profiles.md
examples/ddd-ordering/: index.md
examples/ddd-ordering/aggregates/: index.md  invoice.md  order.md
examples/ddd-ordering/commands/: index.md  issue-invoice.md  place-order.md
examples/ddd-ordering/contexts/: billing.md  index.md  ordering.md
examples/ddd-ordering/entities/: index.md  order-line.md
examples/ddd-ordering/events/: index.md  invoice-issued.md  order-placed.md
examples/ddd-ordering/flows/: index.md  place-order.md
examples/ddd-ordering/glossary/: aggregate-root.md  idempotency.md  index.md
examples/ddd-ordering/mappings/: index.md  ordering-to-billing.md
examples/ddd-ordering/policies/: index.md  issue-invoice-on-order.md  reserve-stock.md
examples/ddd-ordering/repositories/: index.md  orders.md
examples/ddd-ordering/subdomains/: billing.md  index.md  ordering.md
examples/ddd-ordering/value-objects/: index.md  money.md
examples/postgresql-sample/: index.md
examples/postgresql-sample/schemas/sales/: index.md
examples/postgresql-sample/schemas/sales/tables/: customers.md  orders.md
mori/: repo-id
nix/: haskell.nix
okf-cli/: CHANGELOG.md  okf-cli.cabal
okf-cli/app/: Main.hs
okf-cli/help/: agents.md  config.md  format.md  kit.md  okf.md  profiles.md  validation.md
okf-cli/src/Okf/: Cli.hs
okf-cli/src/Okf/Cli/: Assist.hs  Completions.hs  Config.hs  Help.hs  Kit.hs  Version.hs
okf-cli/src/Okf/Cli/Kit/: Config.hs
okf-cli/test/: Main.hs
okf-core/: CHANGELOG.md  okf-core.cabal
okf-core/dhall/: FrontmatterRules.dhall  Profile.dhall  TypeRule.dhall  package.dhall
okf-core/src/Okf/: Bundle.hs  ConceptId.hs  Document.hs  Graph.hs  Index.hs  Log.hs  Prelude.hs  Profile.hs  Validation.hs
okf-core/test/: Main.hs
okf-core/test/fixtures/invalid-dangling-link/: orders.md
okf-core/test/fixtures/invalid-missing-type/: missing-type.md
okf-core/test/fixtures/invalid-unterminated-frontmatter/: broken.md
okf-core/test/fixtures/profile-deviations/schemas/sales/tables/: bad.md  customers.md  orders.md
okf-core/test/fixtures/profiles/: postgresql.dhall
okf-core/test/fixtures/valid-bundle/: index.md  log.md
okf-core/test/fixtures/valid-bundle/datasets/: index.md  sales.md
okf-core/test/fixtures/valid-bundle/references/: index.md  source-system.md
okf-core/test/fixtures/valid-bundle/tables/: customers.md  index.md  orders.md
