cabal-version: 3.4
name: okf-cli
version: 0.1.0.0
synopsis: Command-line interface for okf
description:
  Core library and CLI for Open Knowledge Format bundles

license: BSD-3-Clause
license-file: ../LICENSE
author: Nadeem Bitar
maintainer: nadeem@gmail.com
copyright: (c) 2026 Nadeem Bitar
build-type: Simple
extra-doc-files: ../CHANGELOG.md

common common-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -fhide-source-paths
    -Wmissing-export-lists
    -Wpartial-fields
    -Wmissing-deriving-strategies

  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Okf.Cli

  build-depends:
    aeson,
    base >=4.20 && <5,
    bytestring,
    okf-core,
    generic-lens,
    lens ^>=5.3,
    optparse-applicative >=0.18,
    text ^>=2.1,

test-suite okf-cli-test
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test

  build-depends:
    base >=4.20 && <5,
    okf-cli,
    optparse-applicative >=0.18,
    text ^>=2.1,

executable okf
  import: common-options
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    base >=4.20 && <5,
    okf-cli,
