cabal-version: 3.4
name: okf-core
version: 0.1.0.0
synopsis: Core library and CLI for Open Knowledge Format bundles
description:
  Core library and CLI for Open Knowledge Format bundles

license: BSD-3-Clause
license-file: ../LICENSE
author: Nadeem Bitar
maintainer: nadeem@gmail.com
copyright: (c) 2026 Nadeem Bitar
build-type: Simple
extra-doc-files: ../CHANGELOG.md

common common-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -fhide-source-paths
    -Wmissing-export-lists
    -Wpartial-fields
    -Wmissing-deriving-strategies

  default-language: GHC2024
  default-extensions:
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    Okf.ConceptId
    Okf.Document
    Okf.Prelude
    Okf.Validation

  build-depends:
    aeson,
    attoparsec,
    base >=4.20 && <5,
    bytestring,
    filepath,
    frontmatter,
    generic-lens,
    lens ^>=5.3,
    text ^>=2.1,
    yaml,

test-suite okf-core-test
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test

  build-depends:
    aeson,
    base >=4.20 && <5,
    okf-core,
    text ^>=2.1,
